@@ -130,11 +130,18 @@
         volume = 14,
         pages = "722"
         }
+        
 @article{lxc:2024:morgan,
-        author = "Morgan, W. L.",
-        TITLE = "Morgan Kinema and Research database",
-        journal = "LXCat: An Open-Access, Web-Based Platform for Data Needed for Modeling Low Temperature Plasmas. Plasma Process",
-        }
+  title={Lxcat: An open-access, web-based platform for data needed for modeling low temperature plasmas},
+  author={Pitchford, Leanne C and Alves, Luis L and Bartschat, Klaus and Biagi, Stephen F and Bordage, Marie-Claude and Bray, Igor and Brion, Chris E and Brunger, Michael J and Campbell, Laurence and Chachereau, Alise and others},
+  journal={Plasma Processes and Polymers},
+  volume={14},
+  number={1-2},
+  pages={1600098},
+  year={2017},
+  publisher={Wiley Online Library}
+}
+
 @article{jop:1999:mechlinska,
   title={DT/$\mu$ and DL/$\mu$ for electrons in NO},
   author={Mechlinska-Drewko, Jadwiga and Roznerski, Wladyslaw and Petrovic, Zoran Lj and Karwasz, Grzegorz P},
