@@ -41,7 +41,7 @@ The electron energy range in which BOLSIG+ results are valid depend on the energ
 
 All the processes involving cross-sections used in the BOLSIG+ calculation are given in Table \ref{tab:tableN}. The reduced electric field results are shown in Fig. \ref{fig:electronimpact_4}.
 
-\begin{table*}
+\begin{table*}[!htbp]
   \center\fontsizetable
   \begin{threeparttable}
     \tablecaption{$\rm N$ electron impact processes with available cross-section data.}
@@ -68,9 +68,9 @@ All the processes involving cross-sections used in the BOLSIG+ calculation are g
    \end{threeparttable}
 \end{table*}
 
-\begin{figure}[h]
-\subfigure[]{\label{fig:a}\includegraphics[width=0.99\linewidth, angle=0.0,scale=0.49]{electronimpact_figs/electronimpact_figure4.png}}
-\subfigure[]{\label{fig:b}\includegraphics[width=0.99\linewidth, angle=0.0,scale=0.49]{electronimpact_figs/electronimpact_figure4_error.png}}
+\begin{figure}[!htbp]
+\subfigure[]{\includegraphics[width=0.99\linewidth, angle=0.0,scale=0.49]{electronimpact_figs/electronimpact_figure4.png}}
+\subfigure[]{\includegraphics[width=0.99\linewidth, angle=0.0,scale=0.49]{electronimpact_figs/electronimpact_figure4_error.png}}
 \caption{$E/N$ results for $\rm N$, showing (a) reduced electric field as a function of the electron temperature and (b) error percentage when fitting a cubic spline through BOLSIG+ data. The electron impact cross-sectional data used in the BOLSIG+ calculation is sourced from the Morgan database, Ref.\ \cite{lxc:2024:morgan}.}
 \label{fig:electronimpact_4}
 \end{figure}
@@ -79,7 +79,7 @@ All the processes involving cross-sections used in the BOLSIG+ calculation are g
 
 All the processes involving cross-sections used in the BOLSIG+ calculation are given in Table \ref{tab:tableO}. The reduced electric field results are shown in Fig. \ref{fig:electronimpact_5}.
 
-\begin{table*}
+\begin{table*}[!htbp]
   \center\fontsizetable
   \begin{threeparttable}
     \tablecaption{$\rm O$ electron impact processes with available cross-section data.}
@@ -101,9 +101,9 @@ All the processes involving cross-sections used in the BOLSIG+ calculation are g
 \end{table*}
 
 
-\begin{figure}[h]
-\subfigure[]{\label{fig:a}\includegraphics[width=0.99\linewidth, angle=0.0,scale=0.49]{electronimpact_figs/electronimpact_figure5.png}}
-\subfigure[]{\label{fig:b}\includegraphics[width=0.99\linewidth, angle=0.0,scale=0.49]{electronimpact_figs/electronimpact_figure5_error.png}}
+\begin{figure}[!htbp]
+\subfigure[]{\includegraphics[width=0.99\linewidth, angle=0.0,scale=0.49]{electronimpact_figs/electronimpact_figure5.png}}
+\subfigure[]{\includegraphics[width=0.99\linewidth, angle=0.0,scale=0.49]{electronimpact_figs/electronimpact_figure5_error.png}}
 \caption{$E/N$ results for $\rm O$, showing (a) reduced electric field as a function of the electron temperature and (b) error percentage when fitting a cubic spline through BOLSIG+ data. The electron impact cross-sectional data used in the BOLSIG+ calculation is sourced from the Morgan database, Ref.\ \cite{lxc:2024:morgan}.}
 \label{fig:electronimpact_5}
 \end{figure}
@@ -113,7 +113,7 @@ All the processes involving cross-sections used in the BOLSIG+ calculation are g
 
 Experimental data for $E/N$ vs electron temperature is available from Ch.\ 21 of Ref.\ \citen{book:1997:grigoriev} for $\rm N_2$. In this case a cubic spline is fitted through the experimental data points and also through the remaining lower and upper ranges, if any, for which there is BOLSIG+ data. All the processes involving cross-sections used in the BOLSIG+ calculation are given in Table \ref{tab:tableN2}. The reduced electric field results are shown in Fig. \ref{fig:electronimpact_1}. 
 
-\begin{table*}
+\begin{table*}[!htbp]
   \center\fontsizetable
   \begin{threeparttable}
     \tablecaption{$\rm N_2$ electron impact processes with available cross-section data.}
@@ -157,9 +157,9 @@ Experimental data for $E/N$ vs electron temperature is available from Ch.\ 21 of
    \end{threeparttable}
 \end{table*}
 
-\begin{figure}[h]
-\subfigure[]{\label{fig:a}\includegraphics[width=0.99\linewidth, angle=0.0,scale=0.49]{electronimpact_figs/electronimpact_figure1.png}}
-\subfigure[]{\label{fig:b}\includegraphics[width=0.99\linewidth, angle=0.0,scale=0.49]{electronimpact_figs/electronimpact_figure1_error.png}}
+\begin{figure}[!htbp]
+\subfigure[]{\includegraphics[width=0.99\linewidth, angle=0.0,scale=0.49]{electronimpact_figs/electronimpact_figure1.png}}
+\subfigure[]{\includegraphics[width=0.99\linewidth, angle=0.0,scale=0.49]{electronimpact_figs/electronimpact_figure1_error.png}}
 \caption{$E/N$ results for $\rm N_2$, showing (a) reduced electric field as a function of the electron temperature and (b) error percentage when fitting a cubic spline through the data. Experimental $\rm N_2$ data points are taken from Ref.\ \citen{book:1997:grigoriev}.}
 \label{fig:electronimpact_1}
 \end{figure}
@@ -171,7 +171,7 @@ All the processes involving cross-sections used in the BOLSIG+ calculation are g
 
 
 
-\begin{table*}
+\begin{table*}[!htbp]
   \center\fontsizetable
   \begin{threeparttable}
     \tablecaption{$\rm O_2$ electron impact processes with available cross-section data.}
@@ -203,9 +203,9 @@ All the processes involving cross-sections used in the BOLSIG+ calculation are g
    \end{threeparttable}
 \end{table*}
 %
-\begin{figure}[h]
-\subfigure[]{\label{fig:a}\includegraphics[width=0.99\linewidth, angle=0.0,scale=0.49]{electronimpact_figs/electronimpact_figure2.png}}
-\subfigure[]{\label{fig:b}\includegraphics[width=0.99\linewidth, angle=0.0,scale=0.49]{electronimpact_figs/electronimpact_figure2_error.png}}
+\begin{figure}[!htbp]
+\subfigure[]{\includegraphics[width=0.99\linewidth, angle=0.0,scale=0.49]{electronimpact_figs/electronimpact_figure2.png}}
+\subfigure[]{\includegraphics[width=0.99\linewidth, angle=0.0,scale=0.49]{electronimpact_figs/electronimpact_figure2_error.png}}
 \caption{$E/N$ results for $\rm O_2$, showing (a) reduced electric field as a function of the electron temperature and (b) error percentage when fitting a cubic spline through the data. Experimental $\rm O_2$ data points are taken from \citen{book:1997:grigoriev}.}
 \label{fig:electronimpact_2}
 \end{figure}
@@ -222,7 +222,7 @@ The results for NO are obtained by fitting a spline through BOLSIG+ and known ex
 %
 The final curve fit is shown in Fig. \ref{fig:electronimpact_3} alongside all the reference data used to obtain it. All the processes involving cross-sections used in the BOLSIG+ calculation are given in Table \ref{tab:tableNO}.
 
-\begin{table*}
+\begin{table*}[!htbp]
   \center\fontsizetable
   \begin{threeparttable}
     \tablecaption{$\rm NO$ electron impact processes with available cross-section data.}
@@ -251,9 +251,9 @@ The final curve fit is shown in Fig. \ref{fig:electronimpact_3} alongside all th
    \end{threeparttable}
 \end{table*}
 
-\begin{figure}[h]
-\subfigure[]{\label{fig:a}\includegraphics[width=0.99\linewidth, angle=0.0,scale=0.49]{electronimpact_figs/electronimpact_figure3.png}}
-\subfigure[]{\label{fig:b}\includegraphics[width=0.99\linewidth, angle=0.0,scale=0.49]{electronimpact_figs/electronimpact_figure3_error.png}}
+\begin{figure}[!htbp]
+\subfigure[]{\includegraphics[width=0.99\linewidth, angle=0.0,scale=0.49]{electronimpact_figs/electronimpact_figure3.png}}
+\subfigure[]{\includegraphics[width=0.99\linewidth, angle=0.0,scale=0.49]{electronimpact_figs/electronimpact_figure3_error.png}}
 \caption{$E/N$ results for $\rm NO$, showing (a) reduced electric field as a function of the electron temperature and (b) error percentage when fitting a cubic spline through the data. Experimental data points are taken from Fig.\ 2 of Ref.\ \citen{jop:1999:mechlinska}, Fig.\ 5 of Ref.\ \citen{jos:1934:bailey} and Fig.\ 1.32 of Ref.\ \citen{jos:1934:skinker}. For electron temperatures less than 1000 K, the $E/N$ values are estimated by assuming a value of electron energy loss function $\zeta_{\rm e} = 0.001$. }
 \label{fig:electronimpact_3}
 \end{figure}
@@ -264,7 +264,7 @@ All the processes involving cross-sections used in the BOLSIG+ calculation are g
 
 All the processes involving cross-sections used in the BOLSIG+ calculation are given in Table \ref{tab:tableNH3}. The reduced electric field results are shown in Fig. \ref{fig:electronimpact_6}.
 
-\begin{table*}
+\begin{table*}[!htbp]
   \center\fontsizetable
   \begin{threeparttable}
     \tablecaption{$\rm NH_3$ electron impact processes with available cross-section data.}
@@ -304,9 +304,9 @@ All the processes involving cross-sections used in the BOLSIG+ calculation are g
    \end{threeparttable}
 \end{table*}
 %
-\begin{figure}[h]
-\subfigure[]{\label{fig:a}\includegraphics[width=0.99\linewidth, angle=0.0,scale=0.49]{electronimpact_figs/electronimpact_figure6.png}}
-\subfigure[]{\label{fig:b}\includegraphics[width=0.99\linewidth, angle=0.0,scale=0.49]{electronimpact_figs/electronimpact_figure6_error.png}}
+\begin{figure}[!htbp]
+\subfigure[]{\includegraphics[width=0.99\linewidth, angle=0.0,scale=0.49]{electronimpact_figs/electronimpact_figure6.png}}
+\subfigure[]{\includegraphics[width=0.99\linewidth, angle=0.0,scale=0.49]{electronimpact_figs/electronimpact_figure6_error.png}}
 \caption{$E/N$ results for $\rm NH_3$, showing (a) reduced electric field as a function of the electron temperature and (b) error percentage when fitting a cubic spline through the data. The electron impact cross-sectional data used in the BOLSIG+ calculation is sourced from the Hayashi database, Ref.\ \cite{springer:1987:hayashi}.}
 \label{fig:electronimpact_6}
 \end{figure}
