@@ -11,6 +11,9 @@
 \usepackage{bm}
 \usepackage{amsmath}
 \usepackage{graphicx}
+\usepackage{float}
+\usepackage{multirow}
+\usepackage{multicol}
 
 %%%%%%%%%%%%%=--NEW COMMANDS BEGINS--=%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \newcommand{\alb}{\vspace{0.1cm}\\} % array line break
